Implement call-taker and dispatcher dashboard

--- a/dashboard/src/app/add-incident/add-incident.component.html
+++ b/dashboard/src/app/add-incident/add-incident.component.html
@@ -1,4 +1,4 @@
-<app-header [backButton] = "true" backRoute = "/calltaker" title="Neues Incident"></app-header>
+<app-header [backButton] = "true" backRoute = "/calltaker" title="Neuer Einsatz"></app-header>
 <div class="container">
    
       <mat-stepper #stepper>
@@ -96,7 +96,7 @@
             </mat-chip-set>
           </div>
           <br>
-          <button mat-flat-button color="primary" (click)="saveIncident()" matStepperNext>Incident speichern</button>
+          <button mat-flat-button color="primary" (click)="saveIncident()" matStepperNext>Einsatz speichern</button>
         </div>
         </mat-step>
       </mat-stepper>
