--- a/dashboard/src/app/confirm-dialog/confirm-dialog.component.html
+++ b/dashboard/src/app/confirm-dialog/confirm-dialog.component.html
@@ -3,7 +3,7 @@
   </h1>
   
   <mat-dialog-content>
-    <p>{{message}}</p>
+    <p [innerHTML]="message"></p>
   </mat-dialog-content>
   
   <mat-dialog-actions>
