--- a/dashboard/src/app/detail-incident/detail-incident.component.html
+++ b/dashboard/src/app/detail-incident/detail-incident.component.html
@@ -1,7 +1,7 @@
-<app-header [backButton] = "true" backRoute = "/calltaker" title="Incident Details" [backCheck]="false"></app-header>
+<app-header [backButton] = "true" backRoute = "/calltaker" title="Einsatz Details" [backCheck]="false"></app-header>
 
 <div class="container">
-<button style="position: absolute; right: 30px" mat-raised-button color="primary" (click)="editIncident()">Incident bearbeiten</button>
+<button style="position: absolute; right: 30px" mat-raised-button color="primary" (click)="editIncident()">Einsatz bearbeiten</button>
 
 <img src="../../assets/location.png"> 
 <p>Beschreibung Standort</p>
