--- a/dashboard/src/app/edit-incident/edit-incident.component.html
+++ b/dashboard/src/app/edit-incident/edit-incident.component.html
@@ -1,4 +1,4 @@
-<app-header [backButton] = "true" [backRoute] = "incident" title="Incident bearbeiten"></app-header>
+<app-header [backButton] = "true" [backRoute] = "incident" title="Einsatz bearbeiten"></app-header>
 <div class="container">
    
       <mat-stepper #stepper>
@@ -96,7 +96,7 @@
             </mat-chip-set>
           </div>
           <br>
-          <button mat-flat-button color="primary" (click)="saveIncident()" matStepperNext>Incident updaten</button>
+          <button mat-flat-button color="primary" (click)="saveIncident()" matStepperNext>Einsatz updaten</button>
         </div>
         </mat-step>
       </mat-stepper>
